--- a/src/App.css
+++ b/src/App.css
@@ -38,13 +38,15 @@
 }
 
 .sideBar {
+  z-index:2;
   position: fixed;
   top: 0px;
   right: 0px;
   height: 100vh;
   width: 20rem;
   background-color: var(--bg-color);
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
   transition: 0.3s;
 }
 
