앱 하단 아이콘들에 대한 라우팅 및 ux개선 * Link 태그로 감쌌을 시, a태그의 width 가 좁아서 클릭이 안되는 문제를 수정

--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,12 @@
   border-top: var(--border-color);
 }
 
+.bottomNaviAnchor {
+  display: flex;
+  text-decoration: none;
+  border: 1px solid red;
+  width: 100%;
+}
 .bottomNaviBtn {
   background-color: var(--bg-color);
   width: 100%;
