CSS 수정은 항상 쓸게 없다.
* 상단 메가박스 로고 위치가 중앙 아니었던 문제 수정

--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,13 @@
   justify-content: space-between;
 }
 
+.topNavi > div {
+  height: 25px;
+}
+.topNavi > div:nth-child(1) {
+  padding-right: calc(2rem + 1px);
+}
+
 .sideBar {
   z-index: 2;
   position: absolute;
