--- a/src/App.css
+++ b/src/App.css
@@ -182,11 +182,11 @@
   height: 25px;
 }
 
-.login-middle-input {
+.login-middle-input > form {
   display: flex;
   flex-flow: column nowrap;
 }
-.login-middle-input > input {
+.login-middle-input > form > input {
   padding-bottom: 0.8em;
   border: none;
   border-bottom: 1px solid #d6d6d6;
@@ -197,11 +197,8 @@
   padding-top: 1rem;
 }
 
-.login-middle-form {
-  padding-top: 2rem;
-}
-
 .login-button {
+  margin-top: 2rem;
   width: 100%;
   padding: 1rem;
   border: none;
@@ -218,7 +215,7 @@
   margin-top: 1rem;
 }
 
-.login-bottom-account > a{
+.login-bottom-account > a {
   text-decoration: none;
   color: gray;
   padding: 0.5rem;
