--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,11 @@
 
 .container {
   position: relative;
-  background-color: var(--theme-color);
+  background: radial-gradient(
+    circle at 80%,
+    rgba(44, 26, 45, 1) 20%,
+    rgba(19, 13, 55, 1) 100%
+  );
   width: 100%;
   height: 100vh;
 }
@@ -93,6 +97,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.sideBar-Header-Bottom-links {
+  display: flex;
+  text-decoration: none;
+  color: #d6d6d6;
 }
 
 .sideBar-Shop {
