BottomNavi 의 UX가 개선되었습니다.
 하단 네비게이션 바가 상태를 기억하고 시각적 피드백을 줍니다. 이제 어떤 컴포넌트가 화면에서 렌더링중인지 하단 네비게이션바를 통해 더 쉽게 알 수 있습니다.

--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,9 @@
   padding: 0px;
 }
 
+.active {
+  color: rgb(0, 183, 212);
+}
 .topNavi {
   display: flex;
   background-color: var(--theme-color);
