CSS 변경사항에 대해 적는것은 두렵습니다
* 클래스 이름 컨벤션이 쓰기도 그지같은 것에서 word-word-word 로 변경되었습니다. 보기 훨씬 낫네요
* Join 컴포넌트에서 사용하기 위한 여러가지 클래스들이 추가되었습니다.
* Login 과 SideBar 에서 사용하는 애니메이션 CSS 코드를 다시 최적화 했습니다.

--- a/src/App.css
+++ b/src/App.css
@@ -169,6 +169,7 @@
   bottom: 0;
   transform-origin: right bottom;
   transform: scaleY(1);
+  overflow-y: auto;
 }
 
 .loginHidden {
@@ -254,7 +255,24 @@ input {
   color: black;
 }
 
+/* join === login */
 .join-form {
   display: flex;
   flex-flow: column nowrap;
+}
+
+.join-agree-button-wrapper {
+  display: flex;
+  height: 40px;
+}
+
+.join-agree-button {
+  flex-basis: 50%;
+  border: 2px solid #d6d6d6;
+}
+.agreed {
+  background-color: #ececec;
+  border-color: rgb(0, 183, 212);
+  color: rgb(0, 183, 212);
+  background-color: var(--bg-color);
 }
