--- a/src/App.css
+++ b/src/App.css
@@ -276,3 +276,30 @@ input {
   color: rgb(0, 183, 212);
   background-color: var(--bg-color);
 }
+
+.home {
+  height: calc(100vh - 150px);
+  padding-bottom: 50px;
+}
+
+.home-story-wrapper {
+  display: flex;
+  padding: 1rem;
+}
+
+.home-story-item {
+  display: flex;
+  width: 4rem;
+  height: 5.5rem;
+  border-radius: 2.5rem;
+  border: 2px solid var(--bg-color);
+  justify-content: center;
+  align-items: center;
+}
+
+.home-body {
+  background-color: var(--bg-color);
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  padding: 1rem;
+}
