--- a/src/App.css
+++ b/src/App.css
@@ -384,3 +384,12 @@ input {
   padding: 0.4rem 1rem;
   border-radius: 0.5rem;
 }
+
+.test {
+  border: 2px solid greenyellow;
+}
+
+.test > div {
+  height: 50px;
+  align-items: center;
+}
