Home => Rank => Poster 이미지의 세부사항을 구현했습니다. 그와 관련된 스타일 및 더미데이터를 위한 이미지 파일이 추가됐습니다

--- a/src/App.css
+++ b/src/App.css
@@ -326,24 +326,21 @@ input {
 }
 
 .poster-wrapper {
-  border: 2px solid red;
-  margin: 1rem 0rem;
+  margin-top: 1rem;
 }
 
-.poster-slick {
-  padding-bottom: 1rem;
-}
 .poster {
-  border: 1px solid black;
   list-style: none;
   /* min-width: 11rem; */
   /* width: 11rem; */
   /* height: 20rem; */
   border-radius: 0.5rem;
+  margin-bottom: 1.5rem;
   margin-right: 1rem;
   -webkit-box-shadow: var(--shadow);
   -moz-box-shadow: var(--shadow);
   box-shadow: var(--shadow);
+  
 }
 
 .poster-lookup {
@@ -368,14 +365,23 @@ input {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  align-items: ;
 }
 
 .poster-movie-info-ratio {
   display: flex;
   align-items: center;
   flex-flow: row nowrap;
+
 }
+.poster-movie-info-ratio > span{
+  display: inherit;
+  align-items: center;
+}
+
+.star {
+  color: rgb(87, 0, 87);
+}
+
 .poster-bookBtn {
   border: none;
   background-color: rgb(85, 182, 199);
@@ -383,13 +389,5 @@ input {
   font-size: 0.8rem;
   padding: 0.4rem 1rem;
   border-radius: 0.5rem;
-}
-
-.test {
-  border: 2px solid greenyellow;
-}
-
-.test > div {
-  height: 50px;
-  align-items: center;
+  margin-top: 0.8rem;
 }
