스크린 사이즈 480 이하에서 포스터가 오른쪽 여백을 가지지 않습니다

--- a/src/App.css
+++ b/src/App.css
@@ -45,6 +45,7 @@
 }
 .topNavi {
   z-index: 3;
+  top: 0;
   position: fixed;
   display: flex;
   background-color: var(--theme-color);
@@ -346,6 +347,11 @@ input {
   box-shadow: var(--shadow);
 }
 
+@media screen and (max-width: 480px) {
+  .poster {
+    margin-right: 0rem;
+  }
+}
 .poster-lookup {
   display: flex;
   align-items: center;
