--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
   --theme-color: rgb(19, 13, 55);
   --border-color: #d6d6d6;
   --shadow: 0px 8px 16px 0px rgba(222, 222, 222, 1);
+  --topNavi-height: 50px;
+  --max-width: 1024px;
 }
 
 .container {
@@ -50,15 +52,19 @@
   position: fixed;
   display: flex;
   background-color: var(--theme-color);
-  max-width: 1024px;
+  max-width: var(--max-width);
   width: 100%;
-  height: 50px;
+  height: var(--topNavi-height);
   align-items: center;
   justify-content: space-between;
 }
 
 .topNavi > div {
   height: 25px;
+}
+
+.topNavi > div:nth-child(1) {
+  padding-right: 33px;
 }
 
 .sideBar {
@@ -313,6 +319,7 @@ input {
   border-top-left-radius: 1rem;
   border-top-right-radius: 1rem;
   padding: 1rem;
+  height: calc(100vh -);
 }
 
 .home-body-rank {
@@ -332,6 +339,11 @@ input {
   margin-bottom: 1.5rem;
 }
 
+.poster-explorer {
+  height: 100% !important;
+  border: 1px solid red !important;
+  display: flex;
+}
 .poster {
   list-style: none;
   /* min-width: 11rem; */
